# Database-Project-1

./: .gitignore  BPTree.cpp  BPTree.h  BTree.cpp  CMakeLists.txt  Node.cpp  Node.h  NodeF.cpp  NodeF.h  VirtualDisk.cpp  VirtualDisk.h  main.cpp  try.cpp
data/: data_10_tree.tsv  data_tree_3.tsv  data_tree_4.tsv
